Add JVM options for faster test runs